--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p class="lead">I am Technology enthusiast. I am currently pursuing B.Tech in Electrical Engineer along with B.S. in Data Science and Applications from one of the most prestigious institute i.e. IIT Madras.</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                   <button onclick="location.href = './contact.html';" type="button" class="btn btn-primary btn-lg px-4 me-md-2">Contact Me</button>
-                  <button onclick="location.href = './projects.html'" type="button" class="btn btn-outline-secondary btn-lg px-4">See my projects</button>
+                  <button onclick="location.href = './projects.html';" type="button" class="btn btn-outline-secondary btn-lg px-4">See my projects</button>
                 </div>
               </div>
             </div>
