--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
               <div class="col-lg-6">
                 <h1 class="display-4">About me.</h1>
                 <p class="lead text-muted mb-0">I am Ishant. A tech enthusiast who is pursuing B.S. in <mark>Data Science and its Application</mark> from One of the most prestigious institutes in India(i.e. <a href="https://study.iitm.ac.in/" class="text-muted">
-                  <u>IIT Madras</u></a>). I am also studying <mark>Electrical Engineering</mark> from <a href="https://mmmut.ac.in/" class="text-muted">
+                  <u>IIT Madras</u></a>). I am also studying <mark>Electrical Engineering</mark> from <a href="https://www.mmmut.ac.in/" class="text-muted">
                     <u>MMMUT Gorakhpur</u></a>(Another prestigious tech Institute in Bharat).</p>
               </div>
               <div class="col-lg-6 d-none d-lg-block"><img src="https://bootstrapious.com/i/snippets/sn-about/illus.png" alt="" class="img-fluid"></div>
