--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <div class="col-lg-6">
                 <h1 class="display-5 fw-bold lh-1 mb-3">Hello,</h1>
                 <h1 class="display-5 fw-bold lh-1 mb-3">I am Ishant</h1>
-                <p class="lead">I am Technology enthusiast. I am currently pursuing B.Tech in Electrical Engineer along with B.S. in Data Science and Applications from one of the most prestigious institute i.e. IIT Madras.</p>
+                <p class="lead">I am Technology enthusiast. I am currently pursuing B.Tech in Electrical Engineer along with B.S. in Data Science and Applications from one of the most prestigious institute i.e. IIT Madras (Email: <span style="color: red"><!--email_off-->23f2001685@ds.study.iitm.ac.in<!--/email_off--></span>).</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                   <button onclick="location.href = './contact.html';" type="button" class="btn btn-primary btn-lg px-4 me-md-2">Contact Me</button>
                   <button onclick="location.href = './projects.html';" type="button" class="btn btn-outline-secondary btn-lg px-4">See my projects</button>
