--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-        <link href="styles.css" rel="stylesheet">
+        <link href="css/themes/theme-hourly.css" rel="stylesheet">
         <title>My Webpage</title>
     </head>
     <body>
@@ -19,7 +19,7 @@
             </header>
         </div>
         <hr>
-        <div class="container col-xxl-8 px-4 py-5">
+        <div class="container col-xxl-8 px-4 mt-5">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
               <div class="col-10 col-sm-8 col-lg-6">
                 <img src="projects.png" class="d-block mx-lg-auto img-fluid" alt="Projects" width="700" height="500" loading="lazy">
@@ -36,7 +36,7 @@
             </div>
           </div>
           <!-- -------------------------------------------------------------------------------------------- -->
-          <div class="container px-4 py-5" id="icon-grid">
+          <div class="container px-4 py-5 mt-4" id="icon-grid">
             <h2 class="pb-2 border-bottom">Technologies I know!</h2>
 
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5">
