--- a/projects.html
+++ b/projects.html
@@ -4,17 +4,18 @@
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-        <link href="styles.css" rel="stylesheet">
+        <!-- <link href="styles.css" rel="stylesheet"> -->
+        <link href="css/themes/theme-hourly-projects.css" rel="stylesheet">
         <title>My Webpage</title>
     </head>
     <body class="pr-nav">
         <div class="container">
-            <header class="d-flex justify-content-center py-3">
-              <ul class="nav nav-pills">
-                <li class="nav-item"><a href="./index.html" class="nav-link" aria-current="page">Home</a></li>
-                <li class="nav-item"><a href="./projects.html" class="nav-link active">Projects</a></li>
-                <li class="nav-item"><a href="./contact.html" class="nav-link">Contact Me</a></li>
-                <li class="nav-item"><a href="./about.html" class="nav-link">About</a></li>
+            <header class=" py-1">
+              <ul class="nav nav-pills justify-content-center">
+                <li class="nav-item mx-2"><a href="./index.html" class="nav-link" aria-current="page">Home</a></li>
+                <li class="nav-item mx-2"><a href="./projects.html" class="nav-link active">Projects</a></li>
+                <li class="nav-item mx-2"><a href="./contact.html" class="nav-link">Contact Me</a></li>
+                <li class="nav-item mx-2"><a href="./about.html" class="nav-link">About</a></li>
               </ul>
             </header>
           </div>
