--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-        <link href="styles.css" rel="stylesheet">
+        <link href="css/themes/theme-hourly.css" rel="stylesheet">
         <title>My Webpage</title>
     </head>
     <body>
@@ -18,9 +18,10 @@
               </ul>
             </header>
           </div>
-          <div class="card ppmid" style="width: 36rem;">
-            <div class="card-header">Contact Me</div>
-            <div class="card-body">
+          <div class="contact-wrapper">
+            <div class="card ppmid">
+              <div class="card-header">Contact Me</div>
+              <div class="card-body">
               <form>
                 <div class="mb-3">
                   <label for="name" class="form-label">Full Name</label>
@@ -43,6 +44,7 @@
               </form>
             </div>
           </div>
+        </div>
           <script>
             const recipient = 'ishant9805@gmail.com';
 
